# sdp-team-12

./: .bashrc  .gitignore  Changelog  README.md  ROS_FollowArUco_Code.py  ROS_LiDAR_Navigation_Code.py  aruco.md  aruco_video_detection.py  camera_calibrator_script.m  frames_2023-11-15_17.11.32.gv  frames_2023-11-30_11.48.10.gv  frames_2023-11-30_13.40.51.gv  input.py  input2.py  m5_map.pgm  m5_map.yaml  motor_controller.py  motor_pc_test.py  pico.py  realsense_camera_test.py  servo+motor  target_tracking.md  teleop.pico.py  teleop.py  video_object_detection.py
PCB/: FDRPCB.kicad_pcb  FDRPCB.kicad_prl  FDRPCB.kicad_pro  FDRPCB.kicad_sch  README.md
basic_mobile_robot/: CMakeLists.txt
basic_mobile_robot/behavior_trees/: navigate_to_pose_w_replanning_and_recovery.xml  navigate_to_pose_with_updates.xml  test.xml
basic_mobile_robot/config/: doslam.yaml  ekf.yaml  mapper_params_online_async.yaml  my_controllers.yaml  slam.yaml
basic_mobile_robot/launch/: basic_mobile_bot_v5.launch.py  gazebo_simulator.launch.py  lidar_config.launch.py  nav_env.launch.py  nav_physical.launch.py  nav_simulated.launch.py  navigation_launch.py  robot.launch.py  rplidar.launch.py  sensor_fusion_odom.launch.py  target_tracking.launch.py  teleop_w_nav_rviz.launch.py  urdf_visualizer.launch.py
basic_mobile_robot/maps/: slam_map.yaml.yaml
calibration/: camera_calibrator_script.m  d455i_camParams.mat
cameras/: camera.py  realsense_camera.py
controlphy_ws/: README.md
controlsim_ws/: controlsim_README.md
holo+diff working/: main.py  motor_controller.py
imu/: main.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/navigation/share/navigation/: display.launch.py  package.bash  package.sh  package.xml  package.zsh  robot_description.urdf
log/: latest_build
marker_detection/: CMakeLists.txt  setup.py
navigation/: CMakeLists.txt  package.xml  setup.py
navigator/: setup.py
navphy_ws/: .targets.txt.swp  1  Changelog  README.md  audio_test.py  connect_bluetooth.sh  gui.py  joystick_test.py  nlp_efficient.py  nlp_s2t.py  nlp_test.py  reset_build.sh  run.sh  run_navigation.sh  run_serial.sh  run_target_tracking.sh  run_teleop_keyboard.sh  run_test.sh  set_perms.sh  split_video.sh  start_cloned_streams.sh  system_init.sh  targets.txt  video_test.py
navsim_ws/: README.md
navsim_ws/sim_bot/: CMakeLists.txt
navsim_ws/sim_bot/launch/: nav_simulated.launch.py
pico_code/: MotorTestPWM.py  boot.py  boot_out.txt  code.py
py_serial/: setup.py
rosbag2_2023_11_30-12_17_31/: rosbag2_2023_11_30-12_17_31_0.db3
rosbag2_2023_11_30-12_17_32/: rosbag2_2023_11_30-12_17_32_0.db3
rosbag2_2023_11_30-14_00_13/: rosbag2_2023_11_30-14_00_13_0.db3
rosbag2_2023_11_30-14_00_20/: rosbag2_2023_11_30-14_00_20_0.db3
rpi_pico/: pico.py  pico_backup.py  ttpico_backup.py
target_detection/: package.xml  setup.cfg  setup.py
temp/: main.py  motor_controller.py
(+1006 files in other folders)
